--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@
     --text-color: #fff;
     --bg-color: #1b1f24;
     --second-bg-color: #22282f;
-    --main-color: #13bbff;
+    --main-color: #00ff11;
     --other-color: #c3cad5;
 
     --h1-font: 4.5rem;
@@ -24,4 +24,3 @@ body{
     color: var(--text-color);
     background-color: var(--bg-color);
 }
-
