--- a/styles/header.css
+++ b/styles/header.css
@@ -65,3 +65,9 @@ span{
     transform: scale(1.1);
 
 }
+
+header.sticky {
+    background: var(--bg-color);
+    box-shadow: 0 .1rem 1rem rgba(0,0,0,.2);
+    padding: 16px 16%;
+}
