--- a/styles/footer.css
+++ b/styles/footer.css
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: space-between;
     gap: 2rem;
+    text-align: center;
 
 }
 
@@ -12,17 +13,28 @@
     font-size: 15px;
     font-weight: 400;
     color: var(--other-color) ;
+    text-align: center;
 }
 
 .scroll-top i {
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    background: #075fe4;
+    background: var(--main-color);
     width: 45px;
     height: 45px;
     border-radius: 50%;
     color: var(--text-color);
     font-size: 27px;
+    
 }
+.scroll-top{
+    transition: all 0.5s ease;
+}
+
+.scroll-top:hover {
+    transition: all 0.5s ease;
+    transform: scale(1.2);
+}
+
 
