--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,3 +24,123 @@ body{
     color: var(--text-color);
     background-color: var(--bg-color);
 }
+
+@media (max-width:1700px) {
+    header{
+        padding: 20px 8%;
+    }
+    header.sticky{
+        padding: 14px 8%;
+    }
+    section{
+        padding: 90px 8% 80px;
+    }
+
+    .footer{
+        padding: 18px 8%;
+    }
+
+    .logo{
+        font-size: 28px;
+    }
+}
+
+@media (max-width:1380px) {
+    header{
+        padding: 20px 4%;
+    }
+    header.sticky{
+        padding: 14px 4%;
+    }
+    section{
+        padding: 90px 4% 80px;
+    }
+
+    .footer{
+        padding: 18px 4%;
+    }
+
+    .hero{
+        height: 90vh ;
+        background-position: center;
+    }
+}
+@media(max-width:1290px){
+    .box{
+        padding: 38px 38px 46px;
+    }
+    .box img {
+        width: 100%;
+        height: 60px;
+        max-width: 60px;
+    }
+    .box h3{
+        font-size: 12px;
+    }
+}
+
+@media(max-width:1240px){
+    .about{
+        grid-template-columns: 1fr;
+        grid-area: 2rem;
+        text-align: center;
+    }
+    .about-img img{
+        text-align: center;
+        width: 100%;
+        height: 400px;
+        max-width: 400px;
+        border-radius: 50%;
+        object-fit: cover;
+        margin: 0 auto;
+
+    }
+    :root{
+        --h1-font: 4.5rem;
+        --h2-font: 2.2rem;
+        --p-font: 15px  ;
+
+    }
+}
+@media(max-width: 950px){
+    :root{
+        --h1-font:3.5rem;
+    }
+    .social{
+        margin-bottom: 20px;
+
+    }
+    #menu-icon{
+        display: block;
+    }
+    .navlist{
+        position: absolute;
+        top: 100%;
+        right: -100%;
+        width: 255px;
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        background:var(--bg-color) ;
+        transition: all .5s ease;
+
+    }
+    .navlist a{
+        display: block;
+        padding: 17px;
+        font-size: 22px;
+
+    }
+    .navlist.active{
+        right: 0;
+    }
+    #menu-icon{
+        display:block ;
+    }
+}
+
+@media (max-width:680px){
+    .main-content p{
+        width: 100%;
+    }
+}
