--- a/styles/styles.css
+++ b/styles/styles.css
@@ -75,7 +75,7 @@ body{
         max-width: 60px;
     }
     .box h3{
-        font-size: 12px;
+        font-size: 21px;
     }
 }
 
@@ -96,13 +96,14 @@ body{
 
     }
     :root{
-        --h1-font: 4.5rem;
+        --h1-font: 4.1rem;
         --h2-font: 2.2rem;
         --p-font: 15px  ;
 
     }
 }
 @media(max-width: 950px){
+    
     :root{
         --h1-font:3.5rem;
     }
@@ -111,7 +112,8 @@ body{
 
     }
     #menu-icon{
-        display: block;
+        display: block !important; 
+        visibility: visible !important;
     }
     .navlist{
         position: absolute;
@@ -134,13 +136,29 @@ body{
     .navlist.active{
         right: 0;
     }
-    #menu-icon{
-        display:block ;
-    }
+
 }
 
 @media (max-width:680px){
     .main-content p{
         width: 100%;
+    }
+}
+
+
+@media (max-width:470px){
+    :root{
+        --h1-font:3rem;
+        --h2-font: 2rem;
+    }
+
+    .about-img  img{
+        text-align: center;
+        width: 100%;
+        height: 300px;
+        max-width: 300px;
+        border-radius: 50%;
+        object-fit: cover;
+
     }
 }
