adicionando responsividade para mobile

--- a/styles/about.css
+++ b/styles/about.css
@@ -6,6 +6,10 @@
     gap: 1rem;
 }
 
+.texto-realce{
+    color: var(--main-color);
+}
+
 .about-img img{
     width: 100%;
     height: 530px;
@@ -35,7 +39,7 @@
 }
 
 .exp-area p span {
-    color: var(--other-color);
+    color: var(--main-color);
     font-size: var(--p-font);
     font-weight:400 ;
     margin-left: 8px;
