--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,165 +1,166 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Inter", sans-serif ;
-    text-decoration: none;
-    list-style: none;
-    scroll-behavior: smooth;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Inter", sans-serif;
+  text-decoration: none;
+  list-style: none;
+  scroll-behavior: smooth;
 }
 
-:root{
-    --text-color: #fff;
-    --bg-color: #1b1f24;
-    --second-bg-color: #22282f;
-    --main-color: #00ff11;
-    --other-color: #c3cad5;
+:root {
+  --text-color: #fff;
+  --bg-color: #1b1f24;
+  --second-bg-color: #22282f;
+  --main-color: #00ff11;
+  --other-color: #c3cad5;
 
-    --h1-font: 4.5rem;
-    --h2-font: 2.9rem;
-    --p-font: 1rem;
+  --h1-font: 4.5rem;
+  --h2-font: 2.9rem;
+  --p-font: 1rem;
 }
 
-body{
-    color: var(--text-color);
-    background-color: var(--bg-color);
+body {
+  color: var(--text-color);
+  background-color: var(--bg-color);
 }
 
-@media (max-width:1700px) {
-    header{
-        padding: 20px 8%;
-    }
-    header.sticky{
-        padding: 14px 8%;
-    }
-    section{
-        padding: 90px 8% 80px;
-    }
+@media (max-width: 1700px) {
+  header {
+    padding: 20px 8%;
+  }
+  header.sticky {
+    padding: 14px 8%;
+  }
+  section {
+    padding: 90px 8% 80px;
+  }
 
-    .footer{
-        padding: 18px 8%;
-    }
+  .footer {
+    padding: 18px 8%;
+  }
 
-    .logo{
-        font-size: 28px;
-    }
+  .logo {
+    font-size: 28px;
+  }
+  .top-btnn {
+    padding-left: 1.7rem;
+  }
 }
 
-@media (max-width:1380px) {
-    header{
-        padding: 20px 4%;
-    }
-    header.sticky{
-        padding: 14px 4%;
-    }
-    section{
-        padding: 90px 4% 80px;
-    }
+@media (max-width: 1380px) {
+  header {
+    padding: 20px 4%;
+  }
+  header.sticky {
+    padding: 14px 4%;
+  }
+  section {
+    padding: 90px 4% 80px;
+  }
 
-    .footer{
-        padding: 18px 4%;
-    }
+  .footer {
+    padding: 18px 4%;
+  }
 
-    .hero{
-        height: 90vh ;
-        background-position: center;
-    }
+  .hero {
+    height: 90vh;
+    background-position: center;
+  }
 }
-@media(max-width:1290px){
-    .box{
-        padding: 38px 38px 46px;
-    }
-    .box img {
-        width: 100%;
-        height: 60px;
-        max-width: 60px;
-    }
-    .box h3{
-        font-size: 21px;
-    }
-}
-
-@media(max-width:1240px){
-    .about{
-        grid-template-columns: 1fr;
-        grid-area: 2rem;
-        text-align: center;
-    }
-    .about-img img{
-        text-align: center;
-        width: 100%;
-        height: 400px;
-        max-width: 400px;
-        border-radius: 50%;
-        object-fit: cover;
-        margin: 0 auto;
-
-    }
-    :root{
-        --h1-font: 4.1rem;
-        --h2-font: 2.2rem;
-        --p-font: 15px  ;
-
-    }
-}
-@media(max-width: 950px){
-    
-    :root{
-        --h1-font:3.5rem;
-    }
-    .social{
-        margin-bottom: 20px;
-
-    }
-    #menu-icon{
-        display: block !important; 
-        visibility: visible !important;
-    }
-    .navlist{
-        position: absolute;
-        top: 100%;
-        right: -100%;
-        width: 255px;
-        min-height: 100vh;
-        display: flex;
-        flex-direction: column;
-        background:var(--bg-color) ;
-        transition: all .5s ease;
-
-    }
-    .navlist a{
-        display: block;
-        padding: 17px;
-        font-size: 22px;
-
-    }
-    .navlist.active{
-        right: 0;
-    }
-
+@media (max-width: 1290px) {
+  .box {
+    padding: 38px 38px 46px;
+  }
+  .box img {
+    width: 100%;
+    height: 60px;
+    max-width: 60px;
+  }
+  .box h3 {
+    font-size: 21px;
+  }
 }
 
-@media (max-width:680px){
-    .main-content p{
-        width: 100%;
-    }
+@media (max-width: 1240px) {
+  .about {
+    grid-template-columns: 1fr;
+    grid-area: 2rem;
+    text-align: center;
+  }
+  .about-img img {
+    text-align: center;
+    width: 100%;
+    height: 400px;
+    max-width: 400px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin: 0 auto;
+  }
+  :root {
+    --h1-font: 4.1rem;
+    --h2-font: 2.2rem;
+    --p-font: 15px;
+  }
+}
+@media (max-width: 950px) {
+  :root {
+    --h1-font: 3.5rem;
+  }
+  .social {
+    margin-bottom: 20px;
+  }
+  #menu-icon {
+    display: block !important;
+    visibility: visible !important;
+  }
+  .navlist {
+    position: absolute;
+    top: 100%;
+    right: -100%;
+    width: 255px;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    background: var(--bg-color);
+    transition: all 0.5s ease;
+  }
+  .navlist a {
+    display: block;
+    padding: 17px;
+    font-size: 22px;
+  }
+  .navlist.active {
+    right: 0;
+  }
 }
 
+@media (max-width: 680px) {
+  .main-content p {
+    width: 100%;
+  }
+  .about {
+    grid-template-columns: 1fr !important;
+  }
+}
 
-@media (max-width:470px){
-    :root{
-        --h1-font:3rem;
-        --h2-font: 2rem;
-    }
+@media (max-width: 470px) {
+  :root {
+    --h1-font: 2rem;
+    --h2-font: 2rem;
+  }
 
-    .about-img  img{
-        text-align: center;
-        width: 100%;
-        height: 300px;
-        max-width: 300px;
-        border-radius: 50%;
-        object-fit: cover;
-        margin: 0 auto;
-
-    }
+  .about-img img {
+    text-align: center;
+    width: 100%;
+    height: 300px;
+    max-width: 300px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin: 0 auto;
+  }
+  .top-btnn {
+    position: absolute;
+    padding-top: 155px;
+  }
 }
