reponsividade para celulares adicionada

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -56,7 +56,7 @@ body {
     padding: 14px 4%;
   }
   section {
-    padding: 90px 4% 80px;
+    padding: 90px 4% 80px !important;
   }
 
   .footer {
@@ -133,21 +133,30 @@ body {
   .navlist.active {
     right: 0;
   }
+  .hero{
+    background-image: none !important;
+  }
 }
 
 @media (max-width: 680px) {
   .main-content p {
-    width: 100%;
+    width: 100% !important;
   }
   .about {
     grid-template-columns: 1fr !important;
   }
 }
 
-@media (max-width: 470px) {
+@media (max-width: 480px) {
   :root {
     --h1-font: 2rem;
     --h2-font: 2rem;
+  }
+  header{
+    height: 200px;
+  }
+  #menu-icon{
+    padding-top: 150px;
   }
 
   .about-img img {
@@ -162,5 +171,15 @@ body {
   .top-btnn {
     position: absolute;
     padding-top: 155px;
+    padding-left: 0px;
   }
+  .hero{
+    padding-top: 50% !important;
+  }
+}
+
+@media(max-width: 380px){
+    .hero{
+        padding-top: 80% !important;
+    }
 }
